Set onClick listeners on buttons to navigate to appropriate pages.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="info">Supporting women in tech has always been a top priority for Epicodus. Since our first class, our student body has been about one-third women. But we want to do more, and we know that many other Portland tech companies do, too. That’s why we’re launching Break the Code, an initiative designed to empower more women to join the tech industry.\n\n Through partnerships with Portland-based tech companies and women-focused nonprofit organizations, Epicodus wants to help start a productive dialogue and create a more supportive environment for women choosing careers in programming.</string>
+    <string name="title_activity_non_profit">NonProfitActivity</string>
+    <string name="title_activity_enroll">EnrollActivity</string>
+    <string name="title_activity_sponsors">SponsorsActivity</string>
 </resources>
